option java_outer_classname = "LCFaultInfo";
option java_package = "com.navinfo.opentsp.platform.location.protocol.common";

message FaultInfo{
    optional    GpsLocationData             gpsLocationData             =1;
    repeated    FaultListData               faultListData               =2;
}
message GpsLocationData{
    required    int64                       gpsTime                     =1;
    optional    int32                       latitude                    =2;
    optional    int32                       longitude                   =3;
    optional    int32                       height                      =4;
    optional    int32                       direction                   =5;
    optional    int32                       speed                       =6;
}

message FaultListData{
    optional    int32         faultType                     =	1  ;
    optional    int32         subSpeed                      =	2  ;
    optional    int32         accelerator                   =	3  ;
    optional    int32         brakeSignal                   =	4  ;
    optional    int32         rotation                      =	5  ;
    optional    int32         engineTurbochargedPressure    =	6  ;
    optional    int32         engineIntakePressure          =	7  ;
    optional    int32         engineExhaustTemperature      =	8  ;
    optional    int32         engineCoolantTemperature      =	9  ;
    optional    int32         accelerationRate              =	10 ;
    optional    int32         gear                          =	11 ;
    optional    int32         engineOutputTorque            =	12 ;
    optional    int32         load                          =	13 ;
    optional    int32         engineLoad                    =	14 ;
    optional    int32         vehicleAcceleration           =	15 ;
    optional    int32         vehicleSpeedReduction         =	16 ;
    optional    int32         faultCodeCount                =	17 ;
    repeated    FaultItem     faultItem                     =   18 ;
}

message FaultItem{
    optional    int32         faultAddr                     =	1 ;
    optional    int32         SPN                           =	2 ;
    optional    int32         FMI                           =	3 ;
}

